--- a/index.html
+++ b/index.html
@@ -1628,8 +1628,9 @@
 
         .active-like { color: #00ff00 !important; }
         .active-dislike { color: #ff4444 !important; }
-        .timestamp { color: rgba(255, 255, 255, 0.6); font-size: 0.15rem; }
+        .timestamp { color: rgba(255, 255, 255, 0.6); font-size: 0.55rem; }
         .comment-section { 
+          color: white;
             background: rgba(255, 255, 255, 0.03);
             border-radius: 10px;
             padding: 15px;
